2020-09-10  Sihui Liu  <sihui_liu@apple.com>

        REGRESSION(r266634): [macOS release] 4 layout tests became flaky failures
        https://bugs.webkit.org/show_bug.cgi?id=216275
        <rdar://problem/68515242>

        Reviewed by Tim Horton.

        After r266634, activity state changes caused by adding/removing view will not be dispatched to web process until
        transaction is committed in UI process. To make sure web process picks up the changes, we need to invoke the 
        callbacks after activity state changes are dispatched.

        * UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:
        * UIProcess/API/Cocoa/WKWebViewTesting.mm:
        (-[WKWebView _doAfterActivityStateUpdate:]):
        * UIProcess/Cocoa/WebPageProxyCocoa.mm:
        (WebKit::WebPageProxy::addActivityStateUpdateCompletionHandler):
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::dispatchActivityStateChange):
        * UIProcess/WebPageProxy.h:

2020-09-10  Chris Dumez  <cdumez@apple.com>

        Some WebAudio tests give different output on different machines
        https://bugs.webkit.org/show_bug.cgi?id=216371

        Reviewed by Alex Christensen.

        Add InjectedBundle SPI to set the hardware sample rate.

        * WebProcess/InjectedBundle/API/c/WKBundle.cpp:
        (WKBundleSetHardwareSampleRateOverride):
        * WebProcess/InjectedBundle/API/c/WKBundlePrivate.h:
        * WebProcess/InjectedBundle/InjectedBundle.cpp:
        (WebKit::InjectedBundle::setHardwareSampleRateOverride):
        * WebProcess/InjectedBundle/InjectedBundle.h:

2020-09-10  Sihui Liu  <sihui_liu@apple.com>

        REGRESSION(r266634): fast/animation/request-animation-frame-throttling-lowPowerMode.html is flaky
        https://bugs.webkit.org/show_bug.cgi?id=216261
        <rdar://problem/68513429>

        Reviewed by Tim Horton.

        r266634 makes a behavior change that when there is an activity state change, TiledCoreAnimationDrawingArea 